--- a/WatchApp/ja.lproj/Interface.strings
+++ b/WatchApp/ja.lproj/Interface.strings
@@ -74,7 +74,7 @@
 "rNf-Mh-tID.title" = "ループ";
 
 /* Class = "WKInterfaceLabel"; text = "UNITS"; ObjectID = "rV7-d9-n6u"; */
-"rV7-d9-n6u.text" = "単位";
+"rV7-d9-n6u.text" = "U";
 
 /* Class = "WKInterfaceLabel"; text = "Bolus"; ObjectID = "smL-Rc-IZh"; */
 "smL-Rc-IZh.text" = "ボーラス";
